--- a/html5/html-audio.html
+++ b/html5/html-audio.html
@@ -84,7 +84,7 @@ body {
 /*	border-radius: 1000px;*/
 }
 .scape-range-played.default{
-	
+
 }
 .scape-range-dragbar {
 	border-radius: 1000px;
@@ -110,7 +110,7 @@ body {
 }
 .control-wrap{padding-top:10px;padding-bottom:10px;box-shadow: inset 0 0 5px rgba(0,0,0,0.1);}
 .control .play, .control .next, .control .last, .control .pause {
-	background: url(images/btn.png) no-repeat;
+	background: url(http://localhost:8080/teapot/resources/image/btn.png) no-repeat;
 }
 .control .play, .control .pause {
 	width: 60px;
@@ -151,16 +151,16 @@ body {
 }
 .control .volume{position:absolute;height:50px;width:10px;right:5px;top: 10px;}
 .control .volume-range{height:40px;}
-.control .volume-btn{height:10px;width:10px;background:url(images/vol.png);position:relative;right:3px;top:2px;cursor:pointer;}
+.control .volume-btn{height:10px;width:10px;background:url(http://localhost:8080/teapot/resources/image/vol.png);position:relative;right:3px;top:2px;cursor:pointer;}
 
 .vol-range{border-radius: 0;background:#ccc;}
 .vol-played{border-radius: 0;background:#666;}
 .vol-drag{border-radius: 0;box-shadow: none;}
 .vol-light{border-radius: 0;background: #666;box-shadow: none;}
 </style>
-<script type="text/javascript" src="js/Audio.js"></script>
-<script type="text/javascript" src="js/func.js"></script>
-<script type="text/javascript" src="js/scaperange.js"></script>
+<script type="text/javascript" src="http://localhost:8080/teapot/resources/js/Audio.js"></script>
+<script type="text/javascript" src="http://localhost:8080/teapot/resources/js/func.js"></script>
+<script type="text/javascript" src="http://localhost:8080/teapot/resources/js/scaperange.js"></script>
 <title>LocalAudioPlayer</title>
 </head>
 
@@ -194,5 +194,5 @@ if(!window.Audio){
 	document.getElementById("empty-info").innerHTML = '<span style="color:red;">你的浏览器不支持HTML5！</span>';
 }
 </script>
-<script type="text/javascript" src="js/s.js"></script>
+<script type="text/javascript" src="http://localhost:8080/teapot/resources/js/s.js"></script>
 </html>
