--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,13 @@
   <script src="http://localhost:8080/teapot/resources/js/BX.1.0.1.U.js"></script>
   <script src="http://localhost:8080/teapot/resources/js/TabControl.1.2.js"></script>
 </head>
-<body>
-  <link href="http://localhost:8080/teapot/resources/css/teapot.css" rel="stylesheet"/>
+<body bgcolor="#FF0000">
+  <link href="http://localhost:8080/teapot/resources/css/teapot.css" rel="stylesheet" />
+<table border="0" cellpadding="0" cellspacing="0" align="center" width="1024">
+  <!-- Header -->
+  <tr>
+    <td align="center" height="16px">
+
 <div class="h_mainNavNew cDGray" id ="f-header">
   <ul class="list_menu">
     <li style="background:none; padding-left:2px;"><a href="http://my.oschina.net/dubenju" target="_blank">首页</a></li>
@@ -46,6 +51,43 @@
   </div>
 </div>
 
+    </td>
+  </tr>
+  <!-- Logo -->
+  <tr>
+    <td align="center" height="44px">
+      <table border="0" cellpadding="0" cellspacing="0" align="left" height="44px">
+        <tr>
+          <td width="200px">
+            <a href="http://localhost:8080/teapot/" target="_blank">
+              <img src="http://localhost:8080/teapot/resources/image/logo.png" height="44px" width="200px" alt="http://localhost:8080/teapot/"></img>
+            </a>
+          </td>
+          <td width="624px" align="center">
+            <input type="text" size="70" />
+            <input type="button" value="查询" />
+          </td>
+          <td width="200px">&nbsp;
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <!-- Lancher -->
+  <tr>
+    <td align="center" height="20px" bgcolor="#FF0000">&nbsp;
+    </td>
+  </tr>
+  <!-- Main -->
+  <tr>
+    <td align="center" height="540px">
+      <table border="1" cellpadding="0" cellspacing="0" align="center" height="540px">
+        <tr>
+          <td width="200px" bgcolor="#00FF00">1
+          </td>
+          <td width="624px" >2
+
+
 <div>
 <table>
 <tr>
@@ -72,6 +114,25 @@
 </tr>
 </table>
 </div>
+
+          </td>
+          <td width="200px">3
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <!-- somthing -->
+  <tr>
+    <td align="center" height="40px" bgcolor="#00FFFF">&nbsp;
+    </td>
+  </tr>
+  <!-- Footer -->
+  <tr>
+    <td align="center">xx公司&nbsp;版权所有&nbsp;Copyright&nbsp;©2016&nbsp;xx&nbsp;Inc.&nbsp;All&nbsp;Rights&nbsp;Reserved.
+    </td>
+  </tr>
+</table>
 
 </body>
 </html>
