--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,6 @@ function windowLoad() {
     form.submit();
 }
 </script>
-<form name="form_main" id="form_main" method="post" action="http://localhost:8080/teapot/" >
+<form name="form_main" id="form_main" method="post" action="http://192.168.11.32:8080/teapot/t/" >
 </body>
 </html>
